<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fond_degrade"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/model_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_title"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="@dimen/textview_standard_height"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/entry_cost"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:text="@string/entry_cost"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="@dimen/textview_standard_height"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/entry_fa"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/entry_fa"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="@dimen/textview_standard_height"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/addEntryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:background="@drawable/empty"
        android:contentDescription="@string/empty"
        android:src="@drawable/add" />

</LinearLayout>